--- a/heavycenter/src/main/res/layout/act_main.xml
+++ b/heavycenter/src/main/res/layout/act_main.xml
@@ -8,13 +8,7 @@
             type="String" />
     </data>
 
-    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/drawer_layout"
-        android:fitsSystemWindows="true"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <FrameLayout
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:id="@+id/content_frame"
             android:layout_width="match_parent"
@@ -24,20 +18,42 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <RelativeLayout
-                    android:background="@color/color_base"
-                    android:id="@+id/content"
                     android:layout_width="match_parent"
                     android:layout_weight="1"
-                    android:layout_height="0dp"/>
-            <com.android.lib.view.bottommenu.BottomMenuView
-                android:id="@+id/bottommenu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                    android:layout_height="0dp">
+                    <com.android.lib.view.viewpager.ScrollbleViewPager
+
+                        android:background="@color/red"
+                        android:id="@+id/content"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                </RelativeLayout>
+                <com.android.lib.view.bottommenu.BottomMenuView
+                    android:id="@+id/bottommenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dimens_base_bottom"/>
 
             </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dimens_base_title_clip">
+                <ImageView
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="6dp"
+                    android:background="@color/red"
+                    android:id="@+id/menu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/dimens_base_title_clip"
+                    android:src="@drawable/icon_arraw"
+                    android:gravity="center_vertical"
+                    android:paddingBottom="2.5dp"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:paddingTop="2.5dp"
+                    android:textColor="@color/color_title_select"
+                    android:textSize="17sp"
+                    android:visibility="visible" />
+            </RelativeLayout>
         </FrameLayout>
-        <include
-            android:id="@+id/incloud"
-            layout="@layout/item_drawmenu" />
-    </android.support.v4.widget.DrawerLayout>
 </layout>
