--- a/heavycenter/src/main/res/layout/frag_count.xml
+++ b/heavycenter/src/main/res/layout/frag_count.xml
@@ -9,11 +9,13 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         android:orientation="vertical">
         <include layout="@layout/item_title5"/>
-        <TextView
+        <LinearLayout
+            android:orientation="vertical"
+            android:id="@+id/ll_cntent"
             android:layout_centerInParent="true"
-            android:textColor="@color/black"
             android:text="count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
