--- a/heavycenter/src/main/res/layout/frag_order.xml
+++ b/heavycenter/src/main/res/layout/frag_order.xml
@@ -6,7 +6,8 @@
             type="String" />
     </data>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <include layout="@layout/item_title5"/>
@@ -14,5 +15,5 @@
            android:id="@+id/recycle"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    </RelativeLayout>
+    </LinearLayout>
 </layout>
