--- a/heavycenter/src/main/res/layout/frag_trans.xml
+++ b/heavycenter/src/main/res/layout/frag_trans.xml
@@ -11,10 +11,19 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <include layout="@layout/item_title5"/>
-        <com.baidu.mapapi.map.MapView
-            android:id="@+id/bmapView"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clickable="true" />
+            android:layout_height="match_parent">
+            <com.baidu.mapapi.map.MapView
+                android:id="@+id/bmapView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clickable="true" />
+
+            <com.siweisoft.heavycenter.module.view.drawer.DrawerView
+                android:id="@+id/drawerview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </RelativeLayout>
     </LinearLayout>
 </layout>
