--- a/heavycenter/src/main/res/layout/item_drawmenu.xml
+++ b/heavycenter/src/main/res/layout/item_drawmenu.xml
@@ -14,5 +14,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="#111"
-        android:orientation="vertical"></LinearLayout>
+        android:orientation="vertical"
+        android:clickable="true"></LinearLayout>
 </layout>
