--- a/heavycenter/src/main/res/layout/item_title5.xml
+++ b/heavycenter/src/main/res/layout/item_title5.xml
@@ -17,7 +17,8 @@
     android:orientation="vertical"
     >
 
-    <TextView
+    <ImageView
+        android:src="@mipmap/ic_back"
         android:layout_marginTop="20dp"
         android:id="@+id/ftv_back"
         android:layout_width="wrap_content"
@@ -29,7 +30,6 @@
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
         android:paddingTop="2.5dp"
-        android:text="@={titlebean5.leftTxt}"
         android:textColor="@color/color_title_select"
         android:textSize="17sp"
         android:visibility="visible" />
