--- a/lib/src/main/res/base/layout/item_bottommenu.xml
+++ b/lib/src/main/res/base/layout/item_bottommenu.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.android.lib.view.menuview.homebottom.HomeBottomItem xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+  >
+<com.android.lib.view.menuview.homebottom.HomeBottomItem
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_centerInParent="true"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
@@ -20,3 +27,4 @@
         android:textColor="@color/color_bottom_select"
         android:textSize="11sp" />
 </com.android.lib.view.menuview.homebottom.HomeBottomItem>
+</RelativeLayout>
