--- a/lib/src/main/res/base/layout/item_bottommenus.xml
+++ b/lib/src/main/res/base/layout/item_bottommenus.xml
@@ -3,7 +3,7 @@
     android:background="@color/color_base"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 <View
     android:layout_width="match_parent"
     android:layout_height="1px"
@@ -12,9 +12,8 @@
     android:background="@color/color_base"
     android:id="@+id/ll_container"
     android:orientation="horizontal"
+    android:gravity="center_vertical"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:layout_marginTop="1dp"
-    android:layout_marginBottom="1dp">
+    android:layout_height="match_parent">
 </LinearLayout>
 </LinearLayout>
