--- a/lib/src/main/res/base/layout/layout_baseui.xml
+++ b/lib/src/main/res/base/layout/layout_baseui.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/transparent"
-    android:clipChildren="false"
-    android:fitsSystemWindows="true"
     android:clickable="true"
+    android:fitsSystemWindows="false"
+    android:clipToPadding="true"
     android:orientation="vertical">
 
 </RelativeLayout>
