--- a/lib/src/main/res/values/base_styles.xml
+++ b/lib/src/main/res/values/base_styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar" />
+    <style name="AppTheme1" parent="Theme.AppCompat.Light.NoActionBar" />
 
     <style name="baseTheme" parent="Theme.AppCompat.Light.NoActionBar" />
     <style name="Theme.AppCompat.Light.NoActionBar1" parent="@style/Theme.AppCompat.Light">
@@ -29,5 +29,19 @@
         <item name="android:windowExitAnimation">@anim/anim_push_right_out</item>
     </style>
 
+
+
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="android:textAllCaps">false</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="windowActionBar">false</item>
+       <!-- <item name="android:windowAnimationStyle">@style/AnimationActivity</item>-->
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
 
 </resources>
