--- a/heavycenter/src/main/res/layout/frag_order.xml
+++ b/heavycenter/src/main/res/layout/frag_order.xml
@@ -10,7 +10,8 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <include layout="@layout/item_title5"/>
+        <include layout="@layout/item_title5"
+            android:id="@+id/title"/>
         <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle"
             android:layout_width="match_parent"
