--- a/heavycenter/src/main/res/layout/frag_trans_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_trans_detail.xml
@@ -2,21 +2,14 @@
 <layout xmlns:style_item="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
-            name="act_welc"
+            name="frag_trans_detail"
             type="String" />
     </data>
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/lll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/red"
         android:orientation="vertical">
-        <ImageView
-            android:background="@drawable/aaaaaa"
-            android:orientation="vertical"
-            android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
 
 
     </RelativeLayout>
