--- a/lib/src/main/res/base/layout/pup_list.xml
+++ b/lib/src/main/res/base/layout/pup_list.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <!---->
     <android.support.v7.widget.RecyclerView
@@ -10,6 +10,6 @@
         android:alpha="1"
         android:layout_gravity="center_horizontal"
         android:id="@+id/rcv_pop"
-        android:layout_width="110dp"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
