--- a/lib/src/main/res/values/values.xml
+++ b/lib/src/main/res/values/values.xml
@@ -14,4 +14,14 @@
     <color name="color_item_content_right_txt_color">@color/black</color>
 
 
+    <declare-styleable name="style_item">
+        <attr name="txt_left" format="string"/>
+        <attr name="txt_right" format="string"/>
+        <attr name="txt_right_left" format="string"/>
+        <attr name="iv_left" format="reference"/>
+        <attr name="iv_right" format="reference"/>
+        <attr name="txt_right_bg" format="reference"/>
+        <attr name="bg_divider" format="reference"/>
+    </declare-styleable>
+
 </resources>
