init project struct

--- a/heavycenter/src/main/res/layout/act_main.xml
+++ b/heavycenter/src/main/res/layout/act_main.xml
@@ -26,8 +26,7 @@
                     android:layout_weight="1"
                     android:layout_height="0dp">
                     <com.android.lib.view.viewpager.ScrollbleViewPager
-
-                        android:background="@color/red"
+                        android:background="@color/color_block_back"
                         android:id="@+id/content"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"/>
