--- a/heavycenter/src/main/res/layout/frag_main_order.xml
+++ b/heavycenter/src/main/res/layout/frag_main_order.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:style_title="http://schemas.android.com/tools">
     <data>
         <variable
             name="frag_main_order"
@@ -8,10 +9,14 @@
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
+        android:background="@color/color_block_back"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <include layout="@layout/item_title5"
-            android:id="@+id/title"/>
+        <com.siweisoft.heavycenter.module.view.title.TitleView
+            android:id="@+id/title"
+            style_title:txt_mid ="订单"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
         <com.siweisoft.heavycenter.module.view.menu.TopTypeView2
             android:layout_width="match_parent"
