--- a/heavycenter/src/main/res/layout/act_welc.xml
+++ b/heavycenter/src/main/res/layout/act_welc.xml
@@ -12,7 +12,7 @@
         android:background="@color/red"
         android:orientation="vertical">
         <ImageView
-            android:background="@drawable/aaaaaa"
+            android:background="@drawable/icon_hv_bg"
             android:orientation="vertical"
             android:id="@+id/image"
             android:layout_width="match_parent"
