--- a/heavycenter/src/main/res/layout/frag_login.xml
+++ b/heavycenter/src/main/res/layout/frag_login.xml
@@ -14,7 +14,7 @@
 
 
         <ImageView
-            android:background="@drawable/aaaaaa"
+            android:background="@drawable/icon_hv_bg"
             android:orientation="vertical"
             android:id="@+id/image"
             android:layout_width="match_parent"
