--- a/heavycenter/src/main/res/layout/frag_main_msg.xml
+++ b/heavycenter/src/main/res/layout/frag_main_msg.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:style_title="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/tools"
+    app:ignore="NamespaceTypo">
     <data>
         <variable
             name="frag_main_msg"
@@ -10,8 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
+        android:background="@color/color_block_back"
         android:orientation="vertical">
-        <include layout="@layout/item_title5"/>
+        <com.siweisoft.heavycenter.module.view.title.TitleView
+            android:id="@+id/title"
+            style_title:txt_mid ="消息"
+            style_title:iv_right = "@drawable/icon_hv_scan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
         <com.siweisoft.heavycenter.module.view.menu.TopTypeView
             android:layout_width="match_parent"
