--- a/heavycenter/src/main/res/layout/frag_regist.xml
+++ b/heavycenter/src/main/res/layout/frag_regist.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <ImageView
-            android:background="@drawable/aaaaaa"
+            android:background="@drawable/icon_hv_bg"
             android:orientation="vertical"
             android:id="@+id/image"
             android:layout_width="match_parent"
