--- a/heavycenter/src/main/res/layout/item_title5.xml
+++ b/heavycenter/src/main/res/layout/item_title5.xml
@@ -11,7 +11,7 @@
     android:id="@+id/ftitle_bar"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dimens_base_title_clip"
-    android:background="@color/color_base_nurse"
+    android:background="@color/color_base_heavycenter"
     android:elevation="1dp"
     android:gravity="center_vertical"
     android:orientation="vertical"
@@ -19,7 +19,6 @@
     >
 
     <ImageView
-        android:src="@mipmap/ic_back"
         android:layout_marginTop="20dp"
         android:id="@+id/ftv_back"
         android:layout_width="wrap_content"
@@ -56,12 +55,29 @@
     <ImageView
         android:layout_marginTop="20dp"
         android:id="@+id/ftv_right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="10dp"
-        android:src="@drawable/icon_arraw"
+        android:gravity="center_vertical"
+        android:paddingBottom="2.5dp"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
+        android:paddingTop="2.5dp"
+        android:textColor="@color/color_title_select"
+        android:textSize="17sp"
+        android:visibility="visible" />
+
+
+    <ImageView
+        android:layout_toLeftOf="@id/ftv_right"
+        android:layout_marginTop="20dp"
+        android:id="@+id/ftv_right2"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="10dp"
         android:gravity="center_vertical"
         android:paddingBottom="2.5dp"
         android:paddingLeft="4dp"
