--- a/heavycenter/src/main/res/layout/frag_mana_store.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_store.xml
@@ -16,8 +16,20 @@
         <com.siweisoft.heavycenter.module.view.title.TitleView
             android:id="@+id/title"
             style_title:txt_mid ="仓库管理"
-            style_title:iv_right ="@drawable/icon_scan"
+            style_title:iv_left ="@drawable/icon_hv_back"
+            style_title:iv_right ="@drawable/icon_hv_scan"
+            style_title:iv_right2 ="@drawable/icon_hv_add"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+
+        <com.scwang.smartrefresh.layout.SmartRefreshLayout
+            android:id="@+id/refreshLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
     </LinearLayout>
 </layout>
