--- a/heavycenter/src/main/res/layout/act_acct.xml
+++ b/heavycenter/src/main/res/layout/act_acct.xml
@@ -10,7 +10,7 @@
         android:id="@+id/content_acct"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/red"
+        android:background="@drawable/icon_hv_bg"
         android:orientation="vertical">
     </RelativeLayout>
 </layout>
