--- a/heavycenter/src/main/res/layout/item_main_msg_top.xml
+++ b/heavycenter/src/main/res/layout/item_main_msg_top.xml
@@ -10,9 +10,12 @@
             android:layout_centerInParent="true"
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="40dp">
+            android:background="@color/color_base"
+            android:layout_height="35dp">
 
             <TextView
+                android:textSize="15sp"
+                android:textColor="@color/white"
                 android:id="@+id/a"
                 android:gravity="center"
                 android:text="全部"
@@ -21,6 +24,8 @@
                 android:layout_height="match_parent" />
 
             <TextView
+                android:textSize="15sp"
+                android:textColor="@color/white"
                 android:id="@+id/b"
                 android:gravity="center"
                 android:text="运输"
@@ -29,6 +34,8 @@
                 android:layout_height="match_parent" />
 
             <TextView
+                android:textSize="15sp"
+                android:textColor="@color/white"
                 android:id="@+id/c"
                 android:gravity="center"
                 android:text="车辆"
@@ -37,6 +44,8 @@
                 android:layout_height="match_parent" />
 
             <TextView
+                android:textSize="15sp"
+                android:textColor="@color/white"
                 android:id="@+id/d"
                 android:gravity="center"
                 android:text="公告"
@@ -45,6 +54,8 @@
                 android:layout_height="match_parent" />
 
             <TextView
+                android:textSize="15sp"
+                android:textColor="@color/white"
                 android:id="@+id/e"
                 android:gravity="center"
                 android:text="系统"
