--- a/heavycenter/src/main/res/layout/item_main_order_top.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_top.xml
@@ -10,7 +10,8 @@
             android:layout_centerInParent="true"
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="40dp">
+            android:background="@color/color_base"
+            android:layout_height="35dp">
 
             <TextView
                 android:id="@+id/a"
