--- a/heavycenter/src/main/res/layout/item_title5.xml
+++ b/heavycenter/src/main/res/layout/item_title5.xml
@@ -15,14 +15,14 @@
     android:elevation="1dp"
     android:gravity="center_vertical"
     android:orientation="vertical"
-    android:layout_marginBottom="1dp"
+    android:layout_marginBottom="0dp"
     >
 
     <ImageView
         android:layout_marginTop="20dp"
         android:id="@+id/ftv_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
         android:gravity="center"
