--- a/service/src/main/res/layout/frag_login.xml
+++ b/service/src/main/res/layout/frag_login.xml
@@ -101,7 +101,7 @@
 
                     <LinearLayout
 
-                        android:visibility="visible"
+                        android:visibility="gone"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:layout_marginLeft="20dp"
