--- a/service/src/main/res/layout/frag_videorecord.xml
+++ b/service/src/main/res/layout/frag_videorecord.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:SmartRefreshLayout="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -19,24 +19,16 @@
             layout="@layout/item_title2"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimens_base_title_clip" />
-        <com.android.lib.view.other.AppMaterialRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/refresh"
+        <com.scwang.smartrefresh.layout.SmartRefreshLayout
+            android:id="@+id/refreshLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:isLoadMore="true"
-            app:overlay="false"
-            app:progress_show_circle_backgroud="false"
-            app:progress_size_type="normal"
-            app:wave_color="@color/color_base"
-            app:wave_height_type="normal"
-            app:wave_show="false">
+            android:layout_height="match_parent">
 
             <com.android.lib.view.recyclerview.MyRecyclerView
             android:id="@+id/recycle"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        </com.android.lib.view.other.AppMaterialRefreshLayout>
+        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
     </LinearLayout>
 </layout>
