--- a/heavycenter/src/main/res/layout/frag_main_store.xml
+++ b/heavycenter/src/main/res/layout/frag_main_store.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:background="@color/color_block_back"
         android:orientation="vertical">
-        <com.siweisoft.heavycenter.module.view.title.TitleView
+        <com.android.lib.view.title.TitleView
             android:id="@+id/title"
             style_common:txt_mid ="仓库"
             style_common:iv_right = "@drawable/icon_hv_scan"
