--- a/heavycenter/src/main/res/layout/frag_main_weigt.xml
+++ b/heavycenter/src/main/res/layout/frag_main_weigt.xml
@@ -14,7 +14,7 @@
         android:background="@color/color_block_back"
         >
 
-        <com.siweisoft.heavycenter.module.view.title.TitleView
+        <com.android.lib.view.title.TitleView
             android:id="@+id/title"
             style_common:txt_mid ="地磅"
             android:layout_width="match_parent"
