--- a/heavycenter/src/main/res/layout/frag_mana_good.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_good.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.siweisoft.heavycenter.module.view.title.TitleView
+        <com.android.lib.view.title.TitleView
             android:id="@+id/title"
             style_common:txt_mid ="物料管理"
             style_common:iv_left ="@drawable/icon_hv_back"
