--- a/heavycenter/src/main/res/layout/frag_myce_car_bind.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_car_bind.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
         android:orientation="vertical">
-        <com.siweisoft.heavycenter.module.view.title.TitleView
+        <com.android.lib.view.title.TitleView
             android:id="@+id/title"
             style_common:txt_mid ="绑定车辆"
             style_common:iv_right2 ="@drawable/icon_hv_sel_y"
