--- a/heavycenter/src/main/res/layout/frag_myce_unit_bind.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_bind.xml
@@ -12,7 +12,7 @@
         android:fitsSystemWindows="true"
         android:background="@color/white"
         android:orientation="vertical">
-        <com.siweisoft.heavycenter.module.view.title.TitleView
+        <com.android.lib.view.title.TitleView
             android:id="@+id/title"
             style_common:txt_mid ="绑定单位"
             style_common:iv_right ="@drawable/icon_hv_scan"
