--- a/heavycenter/src/main/res/layout/frag_myce_unit_nobind.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_nobind.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:background="@color/white"
         android:orientation="vertical">
-        <com.siweisoft.heavycenter.module.view.title.TitleView
+        <com.android.lib.view.title.TitleView
             android:id="@+id/title"
             style_common:txt_mid ="绑定单位"
             style_common:iv_left ="@drawable/icon_hv_back"
