--- a/heavycenter/src/main/res/layout/item_myce_head.xml
+++ b/heavycenter/src/main/res/layout/item_myce_head.xml
@@ -21,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <com.siweisoft.heavycenter.module.view.title.TitleView
+                <com.android.lib.view.title.TitleView
                     android:id="@+id/title"
                     style_common:iv_left ="@drawable/icon_hv_back"
                     style_common:iv_right ="@drawable/icon_hv_myce_code"
