--- a/heavycenter/src/main/res/values/colors.xml
+++ b/heavycenter/src/main/res/values/colors.xml
@@ -9,9 +9,17 @@
     <color name="color_base_txt_heavycenter_n">#687189</color>
 
 
+
+    <color name="color_base_statusbar">@color/color_base_heavycenter</color>
+
+
     <color name="color_base">@color/color_base_heavycenter</color>
 
     <color name="color_block_back">#f8f8f8</color>
 
     <color name="color_base_txt_yellow">#f6ab12</color>
+
+
+    <color name="color_item_main_trans_dark">#2e313c</color>
+    <color name="color_item_main_trans_light">#373b48</color>
 </resources>
