--- a/heavycenter/src/main/res/layout/frag_myce_car_bind.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_car_bind.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:style_common="http://schemas.android.com/apk/res-auto">
+<layout xmlns:style_common="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="frag_myce_car_bind"
@@ -9,7 +10,7 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
+        android:background="@color/white"
         android:orientation="vertical">
         <com.android.lib.view.title.TitleView
             android:id="@+id/title"
@@ -26,16 +27,34 @@
             android:layout_height="40dp">
 
             <TextView
+                android:layout_marginRight="10dp"
+                android:textSize="14sp"
+                android:textColor="@color/black"
+                android:layout_marginLeft="10dp"
                 android:text="车牌号"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <EditText
+                android:background="@color/transparent"
+                android:hint="请输入"
+                android:textSize="14sp"
+                android:textColor="@color/color_grey_300"
+                android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent" />
 
             <TextView
+                android:paddingTop="2dp"
+                android:paddingBottom="2dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:background="@drawable/bg_hv_sharp9_yell_solid"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:text="确定"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -43,16 +62,16 @@
         </LinearLayout>
 
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
+            app:srlEnablePureScrollMode="true"
+            app:srlEnableLoadmore="true"
+            app:srlDragRate="0.1"
             android:id="@+id/refreshLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycle"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-
-
+                android:layout_height="match_parent" />
         </com.scwang.smartrefresh.layout.SmartRefreshLayout>
     </LinearLayout>
 </layout>
