--- a/heavycenter/src/main/res/layout/frag_mana_car.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_car.xml
@@ -28,7 +28,7 @@
 
 
 
-                <android.support.v4.view.ViewPager
+                <com.android.lib.view.viewpager.ScrollbleViewPager
                     android:orientation="vertical"
                     android:id="@+id/ll_cntent"
                     android:layout_centerInParent="true"
