--- a/heavycenter/src/main/res/layout/frag_mana_car_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_car_detail.xml
@@ -7,7 +7,7 @@
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:background="@color/white"
+        android:background="@color/color_grey_200"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
@@ -16,45 +16,80 @@
         <com.android.lib.view.title.TitleView
             android:id="@+id/title"
             style_common:iv_right ="@drawable/icon_hv_scan"
-            style_common:iv_right2 ="@drawable/bg_hv_check"
+            style_common:iv_right2 ="@drawable/icon_hv_save"
             style_common:txt_mid ="车辆详情"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <LinearLayout
+            android:background="@color/white"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="110dp">
-            <ImageView
+            <LinearLayout
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/bg_hv_sharp2_gray_stroke"
                 android:layout_weight="1"
-                android:src="@drawable/icon_hv_scan"
                 android:layout_width="0dp"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent">
+                <ImageView
+                    android:layout_weight="1"
+                    android:src="@drawable/icon_hv_driveid"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp" />
 
-            <ImageView
+                <TextView
+                    android:textSize="10sp"
+                    android:text="上传车辆照片"
+                    android:textColor="@color/color_hv_txt_dark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/bg_hv_sharp2_gray_stroke"
                 android:layout_weight="1"
-                android:src="@drawable/icon_hv_scan"
                 android:layout_width="0dp"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent">
+                <ImageView
+                    android:layout_weight="1"
+                    android:src="@drawable/icon_hv_driveid"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp" />
+
+                <TextView
+                    android:textSize="10sp"
+                    android:text="上传车辆照片"
+                    android:textColor="@color/color_hv_txt_dark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+
         </LinearLayout>
 
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
-            style_common:txt_left = "单位名称"
+            android:layout_marginTop="10dp"
+            style_common:txt_left = "品牌名称"
             style_common:txt_mid = "请输入"
             style_common:boo_edit = "true"
             android:layout_width="match_parent"
             android:layout_height="45dp"/>
 
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
-            style_common:txt_left = "单位名称"
-            style_common:txt_mid = "请输入"
-            style_common:boo_edit = "true"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"/>
-
-
-        <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
-            style_common:txt_left = "单位名称"
+            style_common:txt_left = "车辆自重"
             style_common:txt_mid = "请输入"
             style_common:boo_edit = "true"
             android:layout_width="match_parent"
@@ -62,13 +97,31 @@
 
 
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
-            style_common:txt_left = "单位名称"
+            style_common:txt_left = "车辆载重"
             style_common:txt_mid = "请输入"
             style_common:boo_edit = "true"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"/>
+
+
+        <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
+            style_common:txt_left = "车辆IC卡号"
+            style_common:txt_mid = "请输入"
+            style_common:boo_edit = "true"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"/>
+
+        <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
+            android:layout_marginTop="10dp"
+            android:background="@color/white"
+            style_common:txt_left = "选择当前驾驶员"
+            style_common:txt_mid = "请输入"
+            style_common:boo_edit = "false"
             android:layout_width="match_parent"
             android:layout_height="45dp"/>
 
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
