--- a/heavycenter/src/main/res/layout/frag_mana_store_new.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_store_new.xml
@@ -10,26 +10,39 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
+        android:background="@color/white"
         android:orientation="vertical">
         <com.android.lib.view.title.TitleView
             android:id="@+id/title"
             style_common:iv_left ="@drawable/icon_hv_back"
             style_common:txt_mid ="新建仓库"
-            style_common:iv_right2 ="@drawable/drawable_hv_sure_search"
+            style_common:iv_right2 ="@drawable/icon_hv_save"
             style_common:iv_right ="@drawable/icon_hv_scan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
+            style_common:txt_left = "仓库编号"
+            style_common:txt_mid = "请输入"
+            style_common:boo_edit = "false"
+            style_common:iv_right = "@drawable/icon_arraw"
             android:layout_width="match_parent"
-            android:layout_height="50dp"/>
+            android:layout_height="wrap_content"/>
 
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
+            style_common:txt_left = "最大库存"
+            style_common:txt_mid = "请输入"
+            style_common:boo_edit = "false"
+            style_common:iv_right = "@drawable/icon_arraw"
             android:layout_width="match_parent"
-            android:layout_height="50dp"/>
+            android:layout_height="wrap_content"/>
 
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
+            style_common:txt_left = "安全库存"
+            style_common:txt_mid = "请输入"
+            style_common:boo_edit = "false"
+            style_common:iv_right = "@drawable/icon_arraw"
             android:layout_width="match_parent"
-            android:layout_height="50dp"/>
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 </layout>
