--- a/heavycenter/src/main/res/layout/frag_myce_unit_addr.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_addr.xml
@@ -10,11 +10,97 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
+        android:background="@color/white"
         android:orientation="vertical">
         <com.android.lib.view.title.TitleView
             android:id="@+id/title"
+            style_common:iv_right = "@drawable/icon_hv_scan"
             style_common:txt_mid ="单位地址"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:background="@color/white"
+            android:paddingLeft="10dp"
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:gravity="center"
+                android:text="北京市"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <com.siweisoft.heavycenter.module.view.input.SearchBindUnitMyceItem
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+
+        </LinearLayout>
+        <TextView
+            android:background="@color/color_grey_200"
+            android:paddingLeft="10dp"
+            android:textSize="14sp"
+            android:textColor="@color/color_hv_yelll"
+            android:gravity="center_vertical"
+            android:text="当前地址"
+            android:layout_width="match_parent"
+            android:layout_height="40dp" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:background="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
+
+
+            <TextView
+                android:paddingLeft="10dp"
+                android:textSize="14sp"
+                android:textColor="@color/black"
+                android:gravity="center_vertical"
+                android:text="朝阳区北二环50号国贸中心"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp" />
+
+            <View
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:paddingRight="10dp"
+                android:textSize="14sp"
+                android:textColor="@color/color_hv_yelll"
+                android:gravity="center_vertical|right"
+                android:text="重新定位"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp" />
+        </LinearLayout>
+
+        <TextView
+            android:background="@color/color_grey_200"
+            android:paddingLeft="10dp"
+            android:textSize="14sp"
+            android:textColor="@color/color_hv_yelll"
+            android:gravity="center_vertical"
+            android:text="附近地址"
+            android:layout_width="match_parent"
+            android:layout_height="40dp" />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
     </LinearLayout>
 </layout>
