--- a/heavycenter/src/main/res/layout/frag_myce_unit_new_city.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_new_city.xml
@@ -2,7 +2,7 @@
 <layout xmlns:style_common="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
-            name="frag_myce_set_msg"
+            name="frag_myce_unit_new_city"
             type="String" />
     </data>
 
