--- a/heavycenter/src/main/res/layout/item_mana_car_my.xml
+++ b/heavycenter/src/main/res/layout/item_mana_car_my.xml
@@ -6,103 +6,111 @@
             name="item_mana_car_my"
             type="String" />
     </data>
-    <com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/swipe"
-        android:layout_width="match_parent" android:layout_height="80dp"
-        android:paddingTop="1dp"
-        android:paddingBottom="1dp">
-
-        <TextView
-
-            android:textSize="22sp"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:text="停用"
-            android:orientation="horizontal"
-            android:background="#66ddff00"
-            android:id="@+id/bottom_wrapper"
-            android:layout_width="55dp"
-            android:weightSum="1"
-            android:layout_height="match_parent"/>
-    <LinearLayout
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
+        android:background="@color/white"
         android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp">
-
-        <ImageView
-            android:src="@drawable/icon_hv_myce_car"
-            android:layout_width="50dp"
-            android:layout_height="50dp" />
-    <LinearLayout
-        android:layout_marginLeft="10dp"
-        android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
+        <com.daimajia.swipe.SwipeLayout
+            android:id="@+id/swipe"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-<TextView
-
-    android:singleLine="true"
-    android:textColor="@color/black"
-    android:textSize="18sp"
-    android:text="沪A12345"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+            android:layout_height="match_parent">
 
             <TextView
-                android:singleLine="true"
-                android:layout_marginLeft="14dp"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:text="20T"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <View
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="1dp"/>
-            <TextView
-                android:singleLine="true"
-                android:layout_marginLeft="10dp"
-                android:textColor="@color/black"
-                android:textSize="12sp"
-                android:text="奔驰"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+
+                android:textSize="22sp"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:text="停用"
+                android:orientation="horizontal"
+                android:background="#66ddff00"
+                android:id="@+id/bottom_wrapper"
+                android:layout_width="55dp"
+                android:weightSum="1"
+                android:layout_height="match_parent"/>
+            <LinearLayout
+                android:id="@+id/ll_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp">
+
+                <ImageView
+                    android:src="@drawable/icon_hv_mana_car"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp" />
+
+                <LinearLayout
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <TextView
+
+                            android:singleLine="true"
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
+                            android:text="沪A12345"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                        <TextView
+                            android:singleLine="true"
+                            android:layout_marginLeft="14dp"
+                            android:textColor="@color/black"
+                            android:textSize="16sp"
+                            android:text="20T"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                        <View
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:layout_height="1dp"/>
+                        <TextView
+                            android:singleLine="true"
+                            android:layout_marginLeft="10dp"
+                            android:textColor="@color/black"
+                            android:textSize="12sp"
+                            android:text="奔驰"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:layout_marginTop="5dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-            <TextView
-                android:singleLine="true"
-
-                android:textColor="@color/black"
-                android:textSize="12sp"
-                android:text="驾驶员：王先生"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:singleLine="true"
-                android:layout_marginLeft="10dp"
-                android:textColor="@color/black"
-                android:textSize="12sp"
-                android:text="联系电话：1111111111"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+                        <TextView
+                            android:singleLine="true"
+                            android:textColor="@color/color_hv_txt_dark"
+                            android:textSize="14sp"
+                            android:text="驾驶员：王先生"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                        <TextView
+                            android:singleLine="true"
+                            android:layout_marginLeft="10dp"
+                            android:textColor="@color/color_hv_txt_dark"
+                            android:textSize="12sp"
+                            android:text="联系电话：1111111111"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
+        </com.daimajia.swipe.SwipeLayout>
     </LinearLayout>
-    </LinearLayout>
-    </com.daimajia.swipe.SwipeLayout>
 </layout>
