--- a/heavycenter/src/main/res/layout/item_mana_car_send.xml
+++ b/heavycenter/src/main/res/layout/item_mana_car_send.xml
@@ -7,83 +7,87 @@
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/swipe"
+        android:id="@+id/ll_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp">
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp">
+
 
         <ImageView
-            android:src="@drawable/icon_hv_myce_car"
+            android:src="@drawable/icon_hv_mana_car"
             android:layout_width="50dp"
             android:layout_height="50dp" />
-    <LinearLayout
-        android:layout_marginLeft="10dp"
-        android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+
         <LinearLayout
+            android:layout_marginLeft="10dp"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-<TextView
-    android:singleLine="true"
-    android:textColor="@color/black"
-    android:textSize="18sp"
-    android:text="沪A12345"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+            <LinearLayout
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
 
-            <TextView
-                android:singleLine="true"
-                android:layout_marginLeft="14dp"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:text="20T"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <View
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="1dp"/>
-            <TextView
-                android:singleLine="true"
-                android:layout_marginLeft="10dp"
-                android:textColor="@color/black"
-                android:textSize="12sp"
-                android:text="奔驰"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                    android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:text="沪A12345"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:singleLine="true"
+                    android:layout_marginLeft="14dp"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:text="20T"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <View
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"/>
+                <TextView
+                    android:singleLine="true"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+                    android:text="奔驰"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:singleLine="true"
+                    android:textColor="@color/color_hv_txt_dark"
+                    android:textSize="14sp"
+                    android:text="驾驶员：王先生"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:singleLine="true"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="@color/color_hv_txt_dark"
+                    android:textSize="12sp"
+                    android:text="联系电话：1111111111"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
         </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:singleLine="true"
-
-                android:textColor="@color/black"
-                android:textSize="12sp"
-                android:text="驾驶员：王先生"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:singleLine="true"
-                android:layout_marginLeft="10dp"
-                android:textColor="@color/black"
-                android:textSize="12sp"
-                android:text="联系电话：1111111111"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-    </LinearLayout>
     </LinearLayout>
 </layout>
