--- a/heavycenter/src/main/res/layout/item_mana_user.xml
+++ b/heavycenter/src/main/res/layout/item_mana_user.xml
@@ -9,6 +9,7 @@
     <com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipe"
         android:layout_width="match_parent" android:layout_height="80dp"
+        android:background="@color/white"
 >
 
         <TextView
