--- a/heavycenter/src/main/res/layout/item_myce_unit_new.xml
+++ b/heavycenter/src/main/res/layout/item_myce_unit_new.xml
@@ -28,7 +28,14 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"/>
 
-
+        <TextView
+            android:id="@+id/tv_mid"
+            android:textSize="14dp"
+            android:layout_marginLeft="15dp"
+            android:background="@null"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"/>
 
 
         <ImageView
